# agent-protocol

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.archive.md  CHANGELOG.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.archive.md  ROADMAP.md  VERSIONING.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  release_template.md
agents/: implementer.md  planner.md  reviewer.md
docs/: README.md  adoption-anti-metrics.md  adoption-strategy.md  agent-persona-discipline.md  ai-operating-contract.md  ai-project-memory.md  anti-entropy-discipline.md  automation-contract-algorithm.md  automation-contract.md  autonomy-ladder-discipline.md  breaking-change-framework.md  bridges-local-deviations-howto.md  bridges-local-deviations-template.md  change-decomposition.md  change-manifest-spec-cookbook.md  change-manifest-spec.md  ci-cd-integration-hooks.md  codex-install.md  concurrent-changes.md  cross-change-knowledge.md  cross-cutting-concerns.md  decision-trees.md  diagrams.md  evidence-quality-per-type.md  file-role-map.md  (+30 more)
reference-implementations/validator-python/: .gitignore  DEVIATIONS.md  README.md  pyproject.toml
reference-implementations/validator-python/src/agent_protocol_validate/: __init__.py  __main__.py  findings.py  layer1.py  layer2.py  layer3.py  loader.py  surface_map.py  waivers.py
reference-implementations/validator-python/tests/: test_rules.py
reference-implementations/validator-python/tests/fixtures/waiver/: change-manifest.yaml
(+260 files in other folders)
